--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -101,6 +103,11 @@
                     <groupId>com.fasterxml.jackson.dataformat</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.github.zafarkhaja</groupId>
+            <artifactId>java-semver</artifactId>
+            <version>0.9.0</version>
         </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
@@ -241,7 +248,8 @@
                         <ENV_VAR_EXISTS_BOOLEAN>true</ENV_VAR_EXISTS_BOOLEAN>
                         <PROJECT_DIR>${project.basedir}</PROJECT_DIR>
                     </environmentVariables>
-                    <argLine>-Djava.security.manager -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine>
+                    <argLine>-Djava.security.manager
+                        -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine>
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
                     </excludes>
@@ -252,7 +260,10 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.20</version>
                 <configuration>
-                    <argLine>-da -Djava.security.manager -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine>
+                    <argLine>-da -Djava.security.manager
+                        -Djava.security.policy=${basedir}/src/test/resources/java.policy
+                        -Djdk.tls.rejectClientInitiatedRenegotiation=true
+                    </argLine>
                     <environmentVariables>
                         <PROJECT_DIR>${project.basedir}</PROJECT_DIR>
                     </environmentVariables>
@@ -351,30 +362,14 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--  KEEP FOR FUTURE INCASE WE NEED TO VENDOR AGAIN
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <groupId>com.floragunn</groupId>
-                    <artifactId>search-guard-5</artifactId>
-                    <version>${searchguard.version}</version>
-                    <packaging>jar</packaging>
-                    <file>${basedir}/lib/search-guard-5-${searchguard.version}.jar</file>
-                    <generatePom>true</generatePom>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>install-jar-lib</id>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <phase>validate</phase>
-                    </execution>
-                </executions>
-            </plugin>
-            -->
+            <!-- KEEP FOR FUTURE INCASE WE NEED TO VENDOR AGAIN <plugin> 
+                <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-install-plugin</artifactId> 
+                <version>2.5.1</version> <configuration> <groupId>com.floragunn</groupId> 
+                <artifactId>search-guard-5</artifactId> <version>${searchguard.version}</version> 
+                <packaging>jar</packaging> <file>${basedir}/lib/search-guard-5-${searchguard.version}.jar</file> 
+                <generatePom>true</generatePom> </configuration> <executions> <execution> 
+                <id>install-jar-lib</id> <goals> <goal>install-file</goal> </goals> <phase>validate</phase> 
+                </execution> </executions> </plugin> -->
         </plugins>
     </build>
 
